# vidwise-ai

./: .gitignore  COSTS.md  README.md  pyproject.toml
src/video_query/: knowledge_base.py  main.py  process_video.py  transcribe_audio.py  utils.py
